
// patient_srv/proto/patient_srv.proto
syntax = "proto3";

package PATIENT_SRV;

service PatienteService {
  rpc FindOne (PatientById) returns (Patient) {}
  rpc CreateOne (PatientCreate) returns (PatientById) {}
  rpc UpdateOne (PatientUpdate) returns (PatientUpdateStatus) {}
  rpc ChangeStatus (PatientChangeStatus) returns (PatientUpdateStatus) {}
  rpc DeleteOne (PatientById) returns (PatientUpdateStatus) {}
}

message PatientById {
  string id = 1;
}

message Patient {
  string id = 1;
  string name = 2;
  string email = 3;
  bool status = 4;
  string locId = 5;
  string orgId = 6;
}

message PatientCreate {
  string name = 1;
  string email = 2;
}

message PatientUpdate {
  string id = 1;
  optional string name = 2;
  optional string email = 3;
  optional bool status = 4;
}

message PatientChangeStatus {
  string id = 1;
  bool status = 2;
}

message PatientUpdateStatus {
  bool status = 1;
}
